--- a/card_pack.css
+++ b/card_pack.css
@@ -1,7 +1,21 @@
+@charset "UTF-8";
+@import url('http://fonts.cdnfonts.com/css/cloister-black');
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background-color: #000;
   height: 100%;
   margin: 0px;
+}
+
+@media screen and (min-width: 600px) {
+  .card {
+   
+  }
 }
 
 @-webkit-keyframes slide-in-elliptic-bottom-fwd {
@@ -100,6 +114,13 @@ body {
   font-size: 20px;
   color: white;
 }
+
+.button_title,.Again_button{
+  font-family: 'Cloister Black', sans-serif;
+  font-size: 50px;
+}
+
+
 
 .appear{
     display: block;
@@ -302,4 +323,59 @@ body {
     transform: rotateZ(-3deg) rotateX(-12deg) rotateY(-27deg);
   }
 }
+
+
+/* ネオン文字 */
+.button_title,
+.Again_button,
+.neon {
+  text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
+    color: #fff6a9;
+  text-align: center;
+  animation: blink 12s infinite;
+  -webkit-animation: blink 12s infinite;
+}
+
+@-webkit-keyframes blink {
+  20%,
+  24%,
+  55% {
+    color: #111;
+    text-shadow: none;
+  }
+
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+  text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
+    color: #fff6a9;
+  }
+}
+
+@keyframes blink {
+  20%,
+  24%,
+  55% {
+    color: #111;
+    text-shadow: none;
+  }
+
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+  text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
+    color: #fff6a9;
+  }
+}
+
 
